syntax = "proto2";

package NYT.NCellMaster.NProto;

import "yt_proto/yt/core/misc/proto/error.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqRegisterSecondaryMasterAtPrimary
{
    required int32 cell_tag = 1;
}

message TRspRegisterSecondaryMasterAtPrimary
{
    optional NYT.NProto.TError error = 1;
}

message TReqRegisterSecondaryMasterAtSecondary
{
    required int32 cell_tag = 1;
}

message TReqStartSecondaryMasterRegistration
{ }

////////////////////////////////////////////////////////////////////////////////

message TCellStatistics
{
    required int32 chunk_count = 1;
    required int32 lost_vital_chunk_count = 2;
    optional int32 online_node_count = 3;
}

message TReqSetCellStatistics
{
    required int32 cell_tag = 1;
    required TCellStatistics statistics = 2;
}

message TReqSetMulticellStatistics
{
    repeated TReqSetCellStatistics statistics = 1;
}

////////////////////////////////////////////////////////////////////////////////
